test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/define_void.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  void
  identifier(x)
  ;
  return
  const int(0)
  ;
  }
